--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -152,7 +152,7 @@
         <td>
 					<strong>Class 08: Catch Up Day</strong><br/>
 				</td>
-				<td>Jack</td>
+				<td>&mdash;</td>
       </tr>
       <tr>
         <td>Mon<br/> 02-10-25</td>
@@ -163,7 +163,7 @@
 						<li>Kearns, Neel, Roth, Wu.  <a href="https://arxiv.org/abs/1711.05144">Preventing Fairness Gerrymandering: Auditing and Learning for Subgroup Fairness.</a>  ICML 2018</li>
 					</ul>
 				</td>
-				<td>Michael</td>
+				<td>Misha</td>
       </tr>
       <tr>
         <td>Thu<br/> 02-13-25</td>
@@ -173,7 +173,7 @@
 						<li>Kilbertus et al. <a href="https://arxiv.org/abs/1706.02744">Avoiding Discrimination Through Causal Reasoning.</a> NeurIPS 2017</li>
 					</ul>
 				</td>
-				<td>Jeffrey</td>
+				<td>Jeff</td>
       </tr>
       <tr>
         <td>Mon<br/> 02-17-25</td>
@@ -185,16 +185,98 @@
 				<td>&mdash;</td>
       </tr>
       <tr>
-        <td>Thu<br/> 02-20-25</td>
+        <td>Mon<br/> 02-24-25</td>
         <td>
-					<strong>Class 11: Fairness Tradeoffs</strong><br/>
+					<strong>Class 11: Causal Inference Tutorial</strong><br/>
+					<ul>
+						<li>TBD
+					</ul>
+				</td>
+				<td>Jeff</td>
+      </tr>
+      <tr>
+        <td>Mon<br/> 02-24-25</td>
+        <td>
+					<strong>Class 12: Fairness Tradeoffs</strong><br/>
 					<ul>
 						<li>Kleinberg, Mullainathan, Raghavan. <a href="https://arxiv.org/abs/1609.05807">Inherent Trade-Offs in the Fair Determination of Risk Scores.</a> ITCS 2017</li>
 					</ul>
 				</td>
 				<td>Alenna</td>
       </tr>
-      </table> 
+			<tr>
+				<td colspan=3><center><strong>Unit III &mdash; Calibrated Predictions</strong></center></td>
+			</tr>
+      <tr>
+        <td>Thu<br/> 02-27-25</td>
+        <td>
+					<strong>Class 13: Calibrated Predictions</strong><br/>
+					<ul>
+						<li>Foster and Vohra. <a href="assets/calibration-fv98.pdf">Asymptotic Calibration.</a> Biometrika 1998</li>
+						<li>Also see <a href="assets/uncertainty-notes-roth.pdf">Roth's Lecture Notes</a></li>
+					</ul>
+				</td>
+				<td>TBD</td>
+      </tr>
+      <tr>
+        <td>Mon<br/> 03-03-25</td>
+        <td>
+					<strong>No Meeting (Spring Break)</strong><br/>
+					<ul>
+					</ul>
+				</td>
+				<td>&mdash;</td>
+      </tr>
+      <tr>
+        <td>Thu<br/> 03-06-25</td>
+        <td>
+					<strong>No Meeting (Spring Break)</strong><br/>
+					<ul>
+					</ul>
+				</td>
+				<td>&mdash;</td>
+      </tr>
+      <tr>
+        <td>Mon<br/> 03-10-25</td>
+        <td>
+					<strong>Class 14: Multicalibration</strong><br/>
+					<ul>
+						<li>Hebér-Johnson, Kim, Reingold, Rothblum. <a href="https://arxiv.org/abs/1711.08513">Calibration for the (Computationally-Identifiable) Masses.</a> ICML 2018</li>
+					</ul>
+				</td>
+				<td>TBD</td>
+      </tr>
+      <tr>
+        <td>Thu<br/> 03-13-25</td>
+        <td>
+					<strong>Class 15: Conformal Prediction</strong><br/>
+					<ul>
+						<li>Bastani, Gupta,  Jung, Noarov, Ramalingam, Roth.  <a href="https://arxiv.org/abs/2206.01067">Practical Adversarial Multivalid Conformal Prediction.</a> NeurIPS 2022</li>
+					</ul>
+				</td>
+				<td>TBD</td>
+      </tr>
+      <tr>
+        <td>Mon<br/> 03-17-25</td>
+        <td>
+					<strong>Class 16: Omniprediction</strong><br/>
+					<ul>
+						<li>Gopalan, Kalai, Reingold, Sharan, Wieder.  <a href="https://arxiv.org/abs/2109.05389">Omnipredictors.</a> ITCS 2021</li>
+					</ul>
+				</td>
+				<td>TBD</td>
+      </tr>
+      <tr>
+        <td>Thu<br/> 03-20-25</td>
+        <td>
+					<strong>Class 17: Calibration and Distribution Shift</strong><br/>
+					<ul>
+						<li>Kim, Kern, Goldwasser, Kreuter, Reingold. <a href="assets/adaptability-kkgkr21.pdf">Universal adaptability: Target-independent inference that competes with propensity scoring.</a> PNAS 2021</li>
+					</ul>
+				</td>
+				<td>TBD</td>
+      </tr>
+    </table> 
 </div>
 
    
