--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -212,7 +212,7 @@
         <td>
 					<strong>Class 13: Calibrated Predictions</strong><br/>
 					<ul>
-						<li>Foster and Vohra. <a href="assets/calibration-fv98.pdf">Asymptotic Calibration.</a> Biometrika 1998</li>
+						<li>Foster and Vohra. <a href="https://www.jstor.org/stable/2337364">Asymptotic Calibration.</a> Biometrika 1998</li>
 						<li>Also see <a href="assets/uncertainty-notes-roth.pdf">Roth's Lecture Notes</a></li>
 					</ul>
 				</td>
@@ -271,7 +271,7 @@
         <td>
 					<strong>Class 17: Calibration and Distribution Shift</strong><br/>
 					<ul>
-						<li>Kim, Kern, Goldwasser, Kreuter, Reingold. <a href="assets/adaptability-kkgkr21.pdf">Universal adaptability: Target-independent inference that competes with propensity scoring.</a> PNAS 2021</li>
+						<li>Kim, Kern, Goldwasser, Kreuter, Reingold. <a href="https://www.pnas.org/doi/10.1073/pnas.2108097119">Universal adaptability: Target-independent inference that competes with propensity scoring.</a> PNAS 2021</li>
 					</ul>
 				</td>
 				<td>TBD</td>
