--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -185,12 +185,13 @@
 				<td>&mdash;</td>
       </tr>
       <tr>
-        <td>Mon<br/> 02-24-25</td>
+        <td>Thu<br/> 02-20-25</td>
         <td>
 					<strong>Class 11: Causal Inference Tutorial</strong><br/>
 					<ul>
 						<li>TBD
 					</ul>
+					<strong>Note: Due to a scheduling conflict, we will meet in the 22nd floor conference room!  I will lead a group up from the 5th floor so don't worry about access.
 				</td>
 				<td>Jeff</td>
       </tr>
