--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -217,7 +217,7 @@
 						<li>Also see <a href="assets/uncertainty-notes-roth.pdf">Roth's Lecture Notes</a></li>
 					</ul>
 				</td>
-				<td>TBD</td>
+				<td>Jon</td>
       </tr>
       <tr>
         <td>Mon<br/> 03-03-25</td>
@@ -255,7 +255,7 @@
 						<li>Bastani, Gupta,  Jung, Noarov, Ramalingam, Roth.  <a href="https://arxiv.org/abs/2206.01067">Practical Adversarial Multivalid Conformal Prediction.</a> NeurIPS 2022</li>
 					</ul>
 				</td>
-				<td>TBD</td>
+				<td>Zihao</td>
       </tr>
       <tr>
         <td>Mon<br/> 03-17-25</td>
@@ -265,7 +265,7 @@
 						<li>Gopalan, Kalai, Reingold, Sharan, Wieder.  <a href="https://arxiv.org/abs/2109.05389">Omnipredictors.</a> ITCS 2021</li>
 					</ul>
 				</td>
-				<td>TBD</td>
+				<td>Ethan</td>
       </tr>
       <tr>
         <td>Thu<br/> 03-20-25</td>
@@ -275,7 +275,7 @@
 						<li>Kim, Kern, Goldwasser, Kreuter, Reingold. <a href="https://www.pnas.org/doi/10.1073/pnas.2108097119">Universal adaptability: Target-independent inference that competes with propensity scoring.</a> PNAS 2021</li>
 					</ul>
 				</td>
-				<td>TBD</td>
+				<td>Willy</td>
       </tr>
     </table> 
 </div>
