--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -245,7 +245,7 @@
 						<li>Hebér-Johnson, Kim, Reingold, Rothblum. <a href="https://arxiv.org/abs/1711.08513">Calibration for the (Computationally-Identifiable) Masses.</a> ICML 2018</li>
 					</ul>
 				</td>
-				<td>TBD</td>
+				<td>Boce</td>
       </tr>
       <tr>
         <td>Thu<br/> 03-13-25</td>
