--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@
 	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
 	<a href="https://www.mahbodmajid.com/">Mahbod Majid</a>, 
 	<a href="https://argymouz.github.io/">Argyris Mouzakis</a>, 
-	<a href="https://rosesilver.github.io/">Rose Slver</a>, 
+	<a href="https://rosesilver.github.io/">Rose Silver</a>, 
 	Jonathan Ullman</br>
 	ACM-SIAM Symposium on Discrete Algorithms <strong>(SODA '25)</strong><br/>
 </div>
