--- a/research.html
+++ b/research.html
@@ -76,7 +76,7 @@
 	<a href="http://www.ccs.neu.edu/home/vikrantsinghal/">Vikrant Singhal</a>, 
 	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>, and
 	Jonathan Ullman</br>
-	Journal of the American Statistical Association <strong>(JASA)</strong> (to appear)</br>
+	Journal of the American Statistical Association <strong>(JASA '25)</strong></br>
 </div>
 
 <div class="paper">
