--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -277,6 +277,103 @@
 				</td>
 				<td>Willy</td>
       </tr>
+      <tr>
+        <td>Mon<br/> 03-24-25</td>
+        <td>
+					<strong>Class 18: Measuring Calibration</strong><br/>
+					<ul>
+						<li>Blasiok, Gopalan, Hu, Nakkiran. <a href="https://arxiv.org/abs/2211.16886">A Unifying Theory of Distance from Calibration.</a> STOC 2023</li>
+					</ul>
+				</td>
+				<td>&mdash;</td>
+      </tr>
+      <tr>
+        <td>Thu<br/> 03-27-25</td>
+        <td>
+					<strong>No Meeting</strong><br/>
+				</td>
+				<td>&mdash;</td>
+      </tr>
+      <tr>
+        <td>Mon<br/> 03-31-25</td>
+        <td>
+					<strong>Class 19: Robust Statistics and Learning Overview</strong><br/>
+					<ul>
+						<li>No reading</li>
+					</ul>
+				</td>
+				<td>Jon</td>
+      </tr>
+      <tr>
+        <td>Thu<br/> 04-03-25</td>
+        <td>
+					<strong>Class 20: Computationally Efficient Robust Estimation</strong><br/>
+					<ul>
+						<li>Diakonikolas, Kamath, Kane, Li, Moitra, Stewart. <a href="https://arxiv.org/abs/1604.06443">Robust Estimators in High Dimensions without the Computational Intractability</a> STOC 2016</li>
+					</ul>
+				</td>
+				<td>&mdash;</td>
+      </tr>
+      <tr>
+        <td>Mon<br/> 04-07-25</td>
+        <td>
+					<strong>Class 21: Robustness vs. Differential Privacy</strong><br/>
+					<ul>
+						<li>Asi, Ullman, and Zakynthinou. <a href="https://arxiv.org/abs/2302.01855">From Robustness to Privacy and Back.</a> ICML 2023</li>
+					</ul>
+				</td>
+				<td>&mdash;</td>
+      </tr>
+      <tr>
+        <td>Thu<br/> 04-10-25</td>
+        <td>
+					<strong>Class 22: TBD</strong><br/>
+					<ul>
+						<li>TBD</li>
+					</ul>
+				</td>
+				<td>&mdash;</td>
+      </tr>
+      <tr>
+        <td>Mon<br/> 04-14-25</td>
+        <td>
+					<strong>Class 23: TBD</strong><br/>
+					<ul>
+						<li>TBD</li>
+					</ul>
+				</td>
+				<td>&mdash;</td>
+      </tr>
+      <tr>
+        <td>Thu<br/> 04-17-25</td>
+        <td>
+					<strong>Class 24: TBD</strong><br/>
+					<ul>
+						<li>TBD</li>
+					</ul>
+				</td>
+				<td>&mdash;</td>
+      </tr>
+      <tr>
+        <td>Mon<br/> 04-21-25</td>
+        <td>
+					<strong>No Class (Niche Sporting Event)</strong><br/>
+					<ul>
+						<li>TBD</li>
+					</ul>
+				</td>
+				<td>&mdash;</td>
+      </tr>
+      <tr>
+        <td>Thu<br/> 04-24-25</td>
+        <td>
+					<strong>Class 25: TBD</strong><br/>
+					<ul>
+						<li>TBD</li>
+					</ul>
+				</td>
+				<td>&mdash;</td>
+      </tr>
     </table> 
 </div>
 
