--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -317,13 +317,23 @@
       <tr>
         <td>Mon<br/> 04-07-25</td>
         <td>
+					<strong>Class 21: TBD</strong><br/>
+					<ul>
+						<li>TBD</li>
+					</ul>
+				</td>
+				<td>&mdash;</td>
+      </tr>
+      <!--<tr>
+        <td>Mon<br/> 04-07-25</td>
+        <td>
 					<strong>Class 21: Robustness vs. Differential Privacy</strong><br/>
 					<ul>
 						<li>Asi, Ullman, and Zakynthinou. <a href="https://arxiv.org/abs/2302.01855">From Robustness to Privacy and Back.</a> ICML 2023</li>
 					</ul>
 				</td>
 				<td>&mdash;</td>
-      </tr>
+      </tr>-->
       <tr>
         <td>Thu<br/> 04-10-25</td>
         <td>
