--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -285,7 +285,7 @@
 						<li>Blasiok, Gopalan, Hu, Nakkiran. <a href="https://arxiv.org/abs/2211.16886">A Unifying Theory of Distance from Calibration.</a> STOC 2023</li>
 					</ul>
 				</td>
-				<td>&mdash;</td>
+				<td>Konstantina</td>
       </tr>
       <tr>
         <td>Thu<br/> 03-27-25</td>
