--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -307,9 +307,10 @@
       <tr>
         <td>Thu<br/> 04-03-25</td>
         <td>
-					<strong>Class 20: Computationally Efficient Robust Estimation</strong><br/>
+					<strong>Class 20: Robust Estimation in High Dimensions</strong><br/>
 					<ul>
-						<li>Diakonikolas, Kamath, Kane, Li, Moitra, Stewart. <a href="https://arxiv.org/abs/1604.06443">Robust Estimators in High Dimensions without the Computational Intractability</a> STOC 2016</li>
+						<li>Diakonikolas, Kamath, Kane, Li, Moitra, Stewart. <a href="https://arxiv.org/abs/1604.06443">Robust Estimators in High Dimensions without the Computational Intractability.</a> STOC 2016</li>
+						<li>Diakonikolas, Kamath, Kane, Li, Steinhardt, Moitra.  <a href="https://arxiv.org/abs/1803.02815">Sever: A Robust Meta-Algorithm for Stochastic Optimization.</a> ICML 2019</li>
 					</ul>
 				</td>
 				<td>&mdash;</td>
@@ -317,9 +318,10 @@
       <tr>
         <td>Mon<br/> 04-07-25</td>
         <td>
-					<strong>Class 21: TBD</strong><br/>
+					<strong>Class 21: Certified Robustness to Data Poisoning</strong><br/>
 					<ul>
-						<li>TBD</li>
+						<li>Steinhardt, Koh, Liang.  <a href="https://arxiv.org/abs/1706.03691">Certified Defenses for Data Poisoning Attacks.
+</a> NeurIPS 2017</li>
 					</ul>
 				</td>
 				<td>&mdash;</td>
@@ -337,9 +339,9 @@
       <tr>
         <td>Thu<br/> 04-10-25</td>
         <td>
-					<strong>Class 22: TBD</strong><br/>
+					<strong>Class 22: Data Poisoning in Practice</strong><br/>
 					<ul>
-						<li>TBD</li>
+						<li>Carlini, Jagielski, Choquette-Choo, Paleka, Pearce, Anderson, Terzis, Thomas, Tramér.  <a href="https://arxiv.org/abs/2302.10149">Poisoning Web-Scale Training Datasets is Practical.</a> IEEE S&P 2024</li>
 					</ul>
 				</td>
 				<td>&mdash;</td>
@@ -347,9 +349,10 @@
       <tr>
         <td>Mon<br/> 04-14-25</td>
         <td>
-					<strong>Class 23: TBD</strong><br/>
+					<strong>Class 23: Certified Robustness to Adversarial Examples</strong><br/>
 					<ul>
-						<li>TBD</li>
+						<li>Lecuyer, Atlidakis, Geambasu, Hsu, Jana.  <a href="https://arxiv.org/abs/1802.03471">Certified Robustness to Adversarial Examples with Differential Privacy.</a> IEEE S&P 2019</li>
+						<li>Optional: Cohen, Rosenfeld, Kolter.  <a href="https://arxiv.org/abs/1902.02918">Certified Adversarial Robustness via Randomized Smoothing.</a> ICML 2019</li>
 					</ul>
 				</td>
 				<td>&mdash;</td>
@@ -357,9 +360,9 @@
       <tr>
         <td>Thu<br/> 04-17-25</td>
         <td>
-					<strong>Class 24: TBD</strong><br/>
+					<strong>Class 24: Backdoors for Adversarial Examples</strong><br/>
 					<ul>
-						<li>TBD</li>
+						<li>Goldwasser, Kim, Vaikuntanathan, Zamir.  <a href="https://arxiv.org/abs/2204.06974">Planting Undetectable Backdoors in Machine Learning Models</a> FOCS 2022</li>
 					</ul>
 				</td>
 				<td>&mdash;</td>
@@ -377,12 +380,12 @@
       <tr>
         <td>Thu<br/> 04-24-25</td>
         <td>
-					<strong>Class 25: TBD</strong><br/>
+					<strong>Class 25: Adaptive Data Analysis + Baked Goods</strong><br/>
 					<ul>
-						<li>TBD</li>
+						<li>Dwork, Feldman, Hardt, Pitassi, Reingold, Roth.  <a href="https://arxiv.org/abs/1411.2664">Preserving Statistical Validity in Adaptive Data Analysis.</a> STOC 2015</li>
 					</ul>
 				</td>
-				<td>&mdash;</td>
+				<td>Jon</td>
       </tr>
     </table> 
 </div>
