--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -7,7 +7,7 @@
 <head>
 	
 	<title>
-		CS 7880: Foundations of
+		CS 7880: Foundations of Trustworthy ML Seminar
 	</title>
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Vollkorn&display=swap">
 	<link rel="stylesheet" href="css/main.css" type="text/css"/>
@@ -313,7 +313,7 @@
 						<li>Diakonikolas, Kamath, Kane, Li, Steinhardt, Moitra.  <a href="https://arxiv.org/abs/1803.02815">Sever: A Robust Meta-Algorithm for Stochastic Optimization.</a> ICML 2019</li>
 					</ul>
 				</td>
-				<td>&mdash;</td>
+				<td>Evan</td>
       </tr>
       <tr>
         <td>Mon<br/> 04-07-25</td>
@@ -344,7 +344,7 @@
 						<li>Carlini, Jagielski, Choquette-Choo, Paleka, Pearce, Anderson, Terzis, Thomas, Tramér.  <a href="https://arxiv.org/abs/2302.10149">Poisoning Web-Scale Training Datasets is Practical.</a> IEEE S&P 2024</li>
 					</ul>
 				</td>
-				<td>&mdash;</td>
+				<td>Jenny</td>
       </tr>
       <tr>
         <td>Mon<br/> 04-14-25</td>
