--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -355,7 +355,7 @@
 						<li>Optional: Cohen, Rosenfeld, Kolter.  <a href="https://arxiv.org/abs/1902.02918">Certified Adversarial Robustness via Randomized Smoothing.</a> ICML 2019</li>
 					</ul>
 				</td>
-				<td>&mdash;</td>
+				<td>Alex</td>
       </tr>
       <tr>
         <td>Thu<br/> 04-17-25</td>
