--- a/service.html
+++ b/service.html
@@ -50,6 +50,7 @@
 
 <h4> Program Committee Chair / Track Chair </h4>
 <ul>
+	<li> Program Committee Co-chair, Algorithmic Learning Theory <strong>(ALT)</strong> 2026</li>
 	<li> Privacy and Anonymity Track Chair, ACM Conference on Computer and Information Security <strong>(CCS)</strong> 2021</li>
 	<li> Workshop Chair</strong>, Workshop on Theory and Practice of Differential Privacy <strong>(TPDP)</strong> 2017</li>
 </ul>
