--- a/service.html
+++ b/service.html
@@ -42,10 +42,10 @@
 		
 <h4> Organizer </h4>
 <ul>
-	<li> I co-organize the <a href="https://tpdp.journalprivacyconfidentiality.org/">Workshop on Theory and Practice of Differential Privacy</a> and co-chair its steering committee
-	<li> I co-organized a <a href="https://bostondataprivacy.github.io/summerschool/">Boston Differential Privacy Summer School</a> in 2022
-	<li> I am a co-organizer of <a href="https://bostondataprivacy.github.io/privacy-day.html">Charles River Privacy Day</a>
-	<li> I am a co-founder of the blog/website <a href="differentialprivacy.org">differentialprivacy.org</a>
+	<li> I co-organize the <a href="https://tpdp.journalprivacyconfidentiality.org/">Workshop on Theory and Practice of Differential Privacy</a> and co-chair its steering committee </li>
+	<li> I co-organize CRISP: <a href="https://bostondataprivacy.github.io/privacy-day.html">Charles River Symposium on Privacy</a> </li>
+	<li> I co-organized a <a href="https://bostondataprivacy.github.io/summerschool/">Boston Differential Privacy Summer School</a> in 2022 </li>
+	<li> I am a co-founder of the blog/website <a href="differentialprivacy.org">differentialprivacy.org</a> </li>
 </ul>
 
 <h4> Program Committee Chair / Track Chair </h4>
