--- a/service.html
+++ b/service.html
@@ -76,6 +76,7 @@
 
 <h4> Editorial </h4>
 <ul>
+	<li>I'm on the editorial board of the <a href="https://journalprivacyconfidentiality.org/index.php/jpc">Journal of Privacy and Confidentiality</a></li>
 	<li>I'm an action editor for <a href="https://jmlr.org/tmlr/">Transactions on Machine Learning Research</a></li>
 </ul>
 
