--- a/service.html
+++ b/service.html
@@ -42,8 +42,8 @@
 		
 <h4> Organizer </h4>
 <ul>
-	<li> I co-organize the <a href="https://tpdp.journalprivacyconfidentiality.org/">Workshop on Theory and Practice of Differential Privacy</a> and co-chair its steering committee </li>
-	<li> I co-organize CRISP: <a href="https://bostondataprivacy.github.io/privacy-day.html">Charles River Symposium on Privacy</a> </li>
+	<li> I co-organize the <a href="https://tpdp.journalprivacyconfidentiality.org/">Workshop on Theory and Practice of Differential Privacy (TPDP)</a> and co-chair its steering committee </li>
+	<li> I co-organize the <a href="https://bostondataprivacy.github.io/privacy-day.html">Charles River Symposium on Privacy (CRISP)</a> </li>
 	<li> I co-organized a <a href="https://bostondataprivacy.github.io/summerschool/">Boston Differential Privacy Summer School</a> in 2022 </li>
 	<li> I am a co-founder of the blog/website <a href="differentialprivacy.org">differentialprivacy.org</a> </li>
 </ul>
