--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 	<p>In Spring 2025 I am teaching a <a href="cs7880-s25/index.html">CS 7880: Seminar on Foundations of Trustworthy ML</a>.</p>
 	
 	<ul>
+		<li><span id="date">04-15-2025</span> I will be PC co-chair for <a href="http://algorithmiclearningtheory.org/">ALT 2026</a>!  Submit your best work!</li>
+		<li><span id="date">04-14-2025</span> Congratulations to lab alum Nico Berrios, who will be starting his PhD at Georgia Tech in the Fall!</li>
+		<li><span id="date">04-11-2025</span> I joined the editorial board of the <a href="https://journalprivacyconfidentiality.org/index.php/jpc">Journal of Privacy and Confidentiality<a></a>!  Submit your best work!</li>
+		<li><span id="date">04-03-2025</span> Kongratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> on her thesis proposal!  Konstantina will be looking for postdocs soon!</li>
 		<li><span id="date">01-22-2025</span> Kongratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> on her AISTATS <a href="https://arxiv.org/abs/2412.12374">paper</a>!
 		<li><span id="date">01-21-2025</span> I was <a href="https://www.census.gov/newsroom/press-releases/2024/new-members-csac.html">appointed</a> to the Census Scientific Advisory Committee (CSAC)!
 		<li><span id="date">12-18-2024</span> New <a href="https://arxiv.org/abs/2412.12374">paper</a> on private personalized learning!
@@ -78,10 +82,6 @@
 		<li><span id="date">11-22-2024</span> We hosted a successful <a href="https://bostondataprivacy.github.io/privacy-day.html">Privacy Day</a> at BU!
 		<li><span id="date">10-04-2024</span> Congratulations to <a href="https://rosesilver.github.io/">Rose</a> on her SODA <a href="https://arxiv.org/abs/2405.20405">paper</a>
 		<li><span id="date">09-26-2024</span> Congratulations to <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi</a> on his NeurIPS <a href="https://arxiv.org/abs/2406.07407">paper</a>
-		<li><span id="date">06-12-2024</span> New <a href="https://arxiv.org/abs/2406.07407">paper</a> on private geometric median!
-		<li><span id="date">06-05-2024</span> New <a href="https://arxiv.org/abs/2405.20405">paper</a> on person-level differentially private estimation!
-		<li><span id="date">05-08-2024</span> Congratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> and <a href="https://maryamaliakbarpour.com/">Maryam</a> on their COLT <a href="https://arxiv.org/abs/2312.13978">paper</a>!
-		<li><span id="date">04-15-2024</span> So excited that I got to put a <a href="img/jon-lydia-hooding.jpg">hood</a> on <a href="http://www.ccs.neu.edu/home/lydiazak/">Lydia</a>!
 	</ul></div>
 
 	<h4>
