--- a/students.html
+++ b/students.html
@@ -64,6 +64,7 @@
 		<li> <a href="http://albertcheu.com/"> Albert Cheu</a>, PhD 2021 &rarr; Postdoc at Georgetown University &rarr; Research Scientist at Google  &nbsp;<span id="date">Khoury PhD Research Award Winner</span>
 	</ul>
 	<ul>
+		<li> <a href="">Nico Berrios</a>, Visiting UG 2024 &rarr; PhD student at Georgia Tech</li>
 		<li> <a href="">Eric Chapdelaine</a>, NEU UG, 2023&ndash;2024</li>
 		<li> <a href="https://stanley-wu.com/">Stanley Wu</a>, NEU UG, 2021&ndash;2023 &rarr; PhD student at University of Chicago <span id="date">NSF GRFP Winner</span>
 		<li> <a href="https://www.linkedin.com/in/tatiana-ediger"> Tatiana Ediger</a>, NEU UG 2021
