--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="nav">
 					 			<span id="nav-name">Jonathan Ullman</span>
                 <div class="on"><a href="index.html">About</a></div>
-								<div class="off"><a href="research.html">Research</a></div>        
+		<div class="off"><a href="research.html">Research</a></div>        
                 <div class="off"> <a href="students.html">Students</a></div> 
                 <div class="off"><a href="teaching.html">Teaching</a></div>
                 <div class="off"><a href="service.html">Service</a></div>                                   
@@ -71,6 +71,7 @@
 	<p>In Spring 2025 I am teaching a <a href="cs7880-s25/index.html">CS 7880: Seminar on Foundations of Trustworthy ML</a>.</p>
 	
 	<ul>
+		<li><span id="date">06-02-2026</span> Over the moon that former group member <a href="https://lydiazakynthinou.com/">Lydia Zakynthinou</a> will join Johns Hopkins as faculty!</li>
 		<li><span id="date">04-15-2025</span> I will be PC co-chair for <a href="http://algorithmiclearningtheory.org/">ALT 2026</a>!  Submit your best work!</li>
 		<li><span id="date">04-14-2025</span> Congratulations to lab alum Nico Berrios, who will be starting his PhD at Georgia Tech in the Fall!</li>
 		<li><span id="date">04-11-2025</span> I joined the editorial board of the <a href="https://journalprivacyconfidentiality.org/index.php/jpc">Journal of Privacy and Confidentiality<a></a>!  Submit your best work!</li>
@@ -81,7 +82,6 @@
 		<li><span id="date">12-10-2024</span> Our <a href="https://arxiv.org/abs/2301.13334">paper</a> on bias-variance tradeoffs in DP was accepted to JASA&mdash;my first stats journal paper!
 		<li><span id="date">11-22-2024</span> We hosted a successful <a href="https://bostondataprivacy.github.io/privacy-day.html">Privacy Day</a> at BU!
 		<li><span id="date">10-04-2024</span> Congratulations to <a href="https://rosesilver.github.io/">Rose</a> on her SODA <a href="https://arxiv.org/abs/2405.20405">paper</a>
-		<li><span id="date">09-26-2024</span> Congratulations to <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi</a> on his NeurIPS <a href="https://arxiv.org/abs/2406.07407">paper</a>
 	</ul></div>
 
 	<h4>
