--- a/research.html
+++ b/research.html
@@ -45,6 +45,18 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
+	<strong>Black-Box Privacy Attacks on Shared Representations in Multitask Learning</strong>
+	<a href="https://arxiv.org/abs/2506.16460"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="http://www.johnabascal.com/">John Abascal</a>,
+	<a href="">Nicolás Berrios</a>,
+	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>,
+	Jonathan Ullman,
+	<a href="http://cs-people.bu.edu/ads22/">Adam Smith</a>, and
+	<a href="https://jagielski.github.io/">Matthew Jagielski</a> (contribution order)
+</div>
+
+
+<div class="paper">
 	<strong>Instance-Optimal Differentially Private Estimation</strong>
 	<a href="https://arxiv.org/abs/2210.15819"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://audramarymcmillan.wixsite.com/mysite">Audra McMillan</a>,
@@ -86,7 +98,7 @@
 	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
 	<a href="https://www.mahbodmajid.com/">Mahbod Majid</a>, 
 	<a href="https://argymouz.github.io/">Argyris Mouzakis</a>, 
-	<a href="https://rosesilver.github.io/">Rose Silver</a>, 
+	<a href="https://rosesilver.github.io/">Rose Silver</a>, and
 	Jonathan Ullman</br>
 	ACM-SIAM Symposium on Discrete Algorithms <strong>(SODA '25)</strong><br/>
 </div>
@@ -95,7 +107,7 @@
 	<strong>Private Geometric Median</strong>
 	<a href="https://arxiv.org/abs/2406.07407"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://mhaghifam.github.io/mahdihaghifam//">Mahdi Haghifam</a>,
-	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>
+	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>, and
 	Jonathan Ullman<br/>
 	Conference on Neural and Information Processing Systems <strong>(NeurIPS '24)</strong><br/>
 </div>
