--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 	<p>In Spring 2025 I am teaching a <a href="cs7880-s25/index.html">CS 7880: Seminar on Foundations of Trustworthy ML</a>.</p>
 	
 	<ul>
+		<li><span id="date">06-23-2026</span> New <a href="https://arxiv.org/abs/2506.16460">paper</a> on membership-inference attacks in multitask learning!</li>
 		<li><span id="date">06-02-2026</span> Over the moon that former group member <a href="https://lydiazakynthinou.com/">Lydia Zakynthinou</a> will join Johns Hopkins as faculty!</li>
 		<li><span id="date">04-15-2025</span> I will be PC co-chair for <a href="http://algorithmiclearningtheory.org/">ALT 2026</a>!  Submit your best work!</li>
 		<li><span id="date">04-14-2025</span> Congratulations to lab alum Nico Berrios, who will be starting his PhD at Georgia Tech in the Fall!</li>
@@ -81,7 +82,6 @@
 		<li><span id="date">12-18-2024</span> New <a href="https://arxiv.org/abs/2412.12374">paper</a> on private personalized learning!
 		<li><span id="date">12-10-2024</span> Our <a href="https://arxiv.org/abs/2301.13334">paper</a> on bias-variance tradeoffs in DP was accepted to JASA&mdash;my first stats journal paper!
 		<li><span id="date">11-22-2024</span> We hosted a successful <a href="https://bostondataprivacy.github.io/privacy-day.html">Privacy Day</a> at BU!
-		<li><span id="date">10-04-2024</span> Congratulations to <a href="https://rosesilver.github.io/">Rose</a> on her SODA <a href="https://arxiv.org/abs/2405.20405">paper</a>
 	</ul></div>
 
 	<h4>
