--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 	<p>In Spring 2025 I am teaching a <a href="cs7880-s25/index.html">CS 7880: Seminar on Foundations of Trustworthy ML</a>.</p>
 	
 	<ul>
+		<li><span id="date">07-11-2026</span> Excited for <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi</a> to join TTIC as a research assistant professor in the Fall!</li>
 		<li><span id="date">06-23-2026</span> New <a href="https://arxiv.org/abs/2506.16460">paper</a> on membership-inference attacks in multitask learning!</li>
 		<li><span id="date">06-02-2026</span> Over the moon that former group member <a href="https://lydiazakynthinou.com/">Lydia Zakynthinou</a> will join Johns Hopkins as faculty!</li>
 		<li><span id="date">04-15-2025</span> I will be PC co-chair for <a href="http://algorithmiclearningtheory.org/">ALT 2026</a>!  Submit your best work!</li>
@@ -89,7 +90,6 @@
 	<h4>Students</h4>
 	<p>I'm fortunate to work with an amazing group of students and postdocs.  Currently I work with:
 	<ul>
-		<li> <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi Haghifam</a>, Postdoc</li>
 		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen</li>
 		<li> <a href="http://www.johnabascal.com/"> John Abascal</a>, PhD Student, co-advised with Alina Oprea</li>
 		<li> <a href="https://rosesilver.github.io/"> Rose Silver</a>, PhD Student at CMU, co-advised with Elaine Shi</li>
