--- a/students.html
+++ b/students.html
@@ -42,7 +42,7 @@
 		
 <h4>Current Students</h4>
 	<ul>
-		<li> <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi Haghifam</a>, Postdoc <span id="date">Khoury Distinguished Postdoctoral Fellow</span></li>
+		
 	</ul>
 	<ul>
 		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen</li>
@@ -55,11 +55,12 @@
 
 <h4>Alumni</h4>
 	<ul>
+		<li> <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi Haghifam</a>, Postdoc 2023 &ndash; 2025 &rarr; Research Assistant Professor at TTIC <span id="date">Khoury Distinguished Postdoctoral Fellow</span></li>
 		<li> <a href="http://www.mit.edu/~maryama/"> Maryam Aliakbarpour</a>, Postdoc 2021&ndash;2023 &rarr; Faculty at Rice University
 		<li> <a href="https://audramarymcmillan.wixsite.com/mysite"> Audra McMillan</a>, Postdoc 2018&ndash;2020 &rarr; Research Scientist at Apple
 	</ul>
 	<ul>
-		<li> <a href="http://www.ccs.neu.edu/home/lydiazak/"> Lydia Zakynthinou</a>, PhD 2023 &rarr; Postdoc at UC Berkeley &nbsp;<span id="date">Facebook Fellow and Khoury PhD Research Award Winner</span>
+		<li> <a href="http://www.ccs.neu.edu/home/lydiazak/"> Lydia Zakynthinou</a>, PhD 2023 &rarr; Postdoc at UC Berkeley &rarr; Faculty at Johns Hopkins &nbsp;<span id="date">Facebook Fellow + Khoury PhD Research Award Winner</span>
 		<li> <a href="http://www.ccs.neu.edu/home/vikrantsinghal/"> Vikrant Singhal</a>, PhD 2021 &rarr; Postdoc at University of Waterloo &rarr; Research Associate at OpenDP
 		<li> <a href="http://albertcheu.com/"> Albert Cheu</a>, PhD 2021 &rarr; Postdoc at Georgetown University &rarr; Research Scientist at Google  &nbsp;<span id="date">Khoury PhD Research Award Winner</span>
 	</ul>
