--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 	<h4>Current Events</h4>
 	<div id="news">
-	<p>In Spring 2025 I am teaching a <a href="cs7880-s25/index.html">CS 7880: Seminar on Foundations of Trustworthy ML</a>.</p>
+	<p>In Fall 2025 I am teaching a <a href="cs7800-f25/index.html">CS 7800: Advanced Algorithms</a>.</p>
 	
 	<ul>
 		<li><span id="date">07-11-2026</span> Excited for <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi</a> to join TTIC as a research assistant professor in the Fall!</li>
