--- a/teaching.html
+++ b/teaching.html
@@ -38,10 +38,13 @@
 	
 <h2>Teaching</h2>
 	
-<p>I come from a family of teachers, and my passion for teaching is as strong as my passion for research.  For Spring 2025, I am teaching a seminar course <a href="cs7880-s25/index.html">CS7880: Foundations of Trustworthy Machine Learning</a>.  You can see what courses I've taught in the past below.</p>
+<p>I come from a family of teachers, and I have a strong passion for teaching.  For Fall 2025, I am teaching <a href="cs7800-f25/index.html">CS7800: Advanced Algorithms</a>.  You can see what courses I've taught in the past below.</p>
 		
 <h4>Courses at Northeastern</h4>
 	<ul>
+		<li>CS 7880: Seminar on Trustworthy Machine Learning:
+			<a href="cs7880-s25/index.html">Spring 2025</a>
+		</li>
 		<li>CS 7880: Privacy for Machine Learning and Statistics: 
 			<a href="https://dpcourse.github.io/">Spring 2021</a>
 		</li>
