--- a/research.html
+++ b/research.html
@@ -45,6 +45,14 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
+	<strong>Lower Bounds for Public-Private Learning Under Distribution Shift</strong>
+	<a href="https://arxiv.org/abs/2507.17895"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://ars22.github.io/">Amrith Setlur</a>,
+	<a href="https://cs.stanford.edu/~prthaker/">Pratiksha Thaker</a>, and
+	Jonathan Ullman,
+</div>
+
+<div class="paper">
 	<strong>Black-Box Privacy Attacks on Shared Representations in Multitask Learning</strong>
 	<a href="https://arxiv.org/abs/2506.16460"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="http://www.johnabascal.com/">John Abascal</a>,
