--- a/research.html
+++ b/research.html
@@ -49,7 +49,7 @@
 	<a href="https://arxiv.org/abs/2507.17895"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://ars22.github.io/">Amrith Setlur</a>,
 	<a href="https://cs.stanford.edu/~prthaker/">Pratiksha Thaker</a>, and
-	Jonathan Ullman,
+	Jonathan Ullman
 </div>
 
 <div class="paper">
