--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
 	<p>In Fall 2025 I am teaching a <a href="cs7800-f25/index.html">CS 7800: Advanced Algorithms</a>.</p>
 	
 	<ul>
-		<li><span id="date">07-11-2026</span> Excited for <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi</a> to join TTIC as a research assistant professor in the Fall!</li>
-		<li><span id="date">06-23-2026</span> New <a href="https://arxiv.org/abs/2506.16460">paper</a> on membership-inference attacks in multitask learning!</li>
-		<li><span id="date">06-02-2026</span> Over the moon that former group member <a href="https://lydiazakynthinou.com/">Lydia Zakynthinou</a> will join Johns Hopkins as faculty!</li>
+		<li><span id="date">08-30-2025</span> New <a href="https://arxiv.org/abs/2508.19458">paper</a> on the theory of membership-inference attacks!</li>
+		<li><span id="date">07-11-2025</span> Excited for <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi</a> to join TTIC as a research assistant professor in the Fall!</li>
+		<li><span id="date">06-23-2025</span> New <a href="https://arxiv.org/abs/2506.16460">paper</a> on membership-inference attacks in multitask learning!</li>
+		<li><span id="date">06-02-2025</span> Over the moon that former group member <a href="https://lydiazakynthinou.com/">Lydia Zakynthinou</a> will join Johns Hopkins as faculty!</li>
 		<li><span id="date">04-15-2025</span> I will be PC co-chair for <a href="http://algorithmiclearningtheory.org/">ALT 2026</a>!  Submit your best work!</li>
 		<li><span id="date">04-14-2025</span> Congratulations to lab alum Nico Berrios, who will be starting his PhD at Georgia Tech in the Fall!</li>
 		<li><span id="date">04-11-2025</span> I joined the editorial board of the <a href="https://journalprivacyconfidentiality.org/index.php/jpc">Journal of Privacy and Confidentiality<a></a>!  Submit your best work!</li>
