--- a/research.html
+++ b/research.html
@@ -45,6 +45,14 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
+	<strong>The Sample Complexity of Membership Inference and Privacy Auditing</strong>
+	<a href="https://arxiv.org/abs/2508.19458"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://mhaghifam.github.io/mahdihaghifam//">Mahdi Haghifam</a>,
+	<a href="http://cs-people.bu.edu/ads22/">Adam Smith</a>, and
+	Jonathan Ullman
+</div>
+
+<div class="paper">
 	<strong>Lower Bounds for Public-Private Learning Under Distribution Shift</strong>
 	<a href="https://arxiv.org/abs/2507.17895"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://ars22.github.io/">Amrith Setlur</a>,
