--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -46,37 +46,251 @@
 		    <tr>
 		      <th style="width: 110px;">Date</th>
 		      <th style="width: 420px;">Topic</th>
-					<th style="width: 150px;">Reading</th>
-		      <th style="width: 150px;">Notes</th>
+					<th style="width: 180px;">Reading</th>
+		      <th style="width: 180px;">Notes</th>
 		    </tr>
 		    <tr>
 		      <td>Fri<br/> 09/05/25</td>
 		      <td>
-						<strong>Lecture 1: Introduction</strong><br/>
+						<strong>Class 1: Introduction</strong><br/>
 						<ul>
 							<li>Course Overview</li>
+							<li>Stable Matching</li>
 						</ul>
-						<!--<a href="assets/01-stable-matching.pdf">[slides]</a>-->
+						[slides after]
+					</td>
+					<td>&mdash;</td>
+		      <td>HW0 Out: [pdf] [tex]</td>
+		    </tr>
+		    <tr>
+		      <td>Tue<br/> 09/09/25</td>
+		      <td>
+						<strong>Class 2: Greedy Algorithms</strong><br/>
+						<ul>
+							<li>Interval Scheduling</li>
+							<li>Minimizing Lateness</li>
+						</ul>
+						[slides before] [slides after]
+					</td>
+					<td>KT 4.1&ndash;4.2</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Fri<br/> 09/12/25</td>
+		      <td>
+						<strong>Class 3: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td><strong>HW0 Due</strong></td>
+		    </tr>
+		    <!--<tr>
+		      <td>Tue<br/> 09/16/25</td>
+		      <td>
+						<strong>Class 4: TBD</strong><br/>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
 		    </tr>
 		    <tr>
-		      <td>Tue<br/> 09/09/22</td>
+		      <td>Fri<br/> 09/19/25</td>
 		      <td>
-						<strong>Lecture 2: TBD</strong><br/>
+						<strong>Class 5: TBD</strong><br/>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
 		    </tr>
 		    <tr>
-		      <td>Fri<br/> 09/12/22</td>
+		      <td>Tue<br/> 09/23/25</td>
 		      <td>
-						<strong>Lecture 3: TBD</strong><br/>
+						<strong>Class 6: TBD</strong><br/>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
 		    </tr>
+		    <tr>
+		      <td>Fri<br/> 09/26/25</td>
+		      <td>
+						<strong>Class 7: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Tue<br/> 09/30/25</td>
+		      <td>
+						<strong>Class 8: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Fri<br/> 10/02/25</td>
+		      <td>
+						<strong>Class 9: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Tue<br/> 10/07/25</td>
+		      <td>
+						<strong>Class 10: Exam I</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Fri<br/> 10/10/25</td>
+		      <td>
+						<strong>Class 11: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Tue<br/> 10/14/22</td>
+		      <td>
+						<strong>Class 12: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Fri<br/> 10/17/25</td>
+		      <td>
+						<strong>Class 13: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Tue<br/> 10/21/25</td>
+		      <td>
+						<strong>Class 14: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Fri<br/> 10/24/25</td>
+		      <td>
+						<strong>Class 15: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Tue<br/> 10/28/25</td>
+		      <td>
+						<strong>Class 16: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Fri<br/> 10/31/25</td>
+		      <td>
+						<strong>Class 17: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Tue<br/> 11/04/25</td>
+		      <td>
+						<strong>Class 18: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Fri<br/> 11/07/25</td>
+		      <td>
+						<strong>Class 19: Exam II</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Tue<br/> 11/11/25</td>
+		      <td>
+						<strong>No Class (Veteran's Day)</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Fri<br/> 11/14/25</td>
+		      <td>
+						<strong>Class 20: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Tue<br/> 11/18/25</td>
+		      <td>
+						<strong>Class 21: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Fri<br/> 11/21/25</td>
+		      <td>
+						<strong>Class 22: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Tue<br/> 11/25/25</td>
+		      <td>
+						<strong>Class 23: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Fri<br/> 11/28/25</td>
+		      <td>
+						<strong>No Class (Thanksgiving)</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Tue<br/> 12/02/25</td>
+		      <td>
+						<strong>Class 24: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Fri<br/> 12/05/25</td>
+		      <td>
+						<strong>Class 25: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Tue<br/> 12/09/25</td>
+		      <td>
+						<strong>Class 26: TBD</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Fri<br/> 12/12/25</td>
+		      <td>
+						<strong>Class 27: Exam III</strong><br/>
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>-->
       </table>
       
 </div>
