--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -46,8 +46,8 @@
 		    <tr>
 		      <th style="width: 110px;">Date</th>
 		      <th style="width: 420px;">Topic</th>
-					<th style="width: 180px;">Reading</th>
-		      <th style="width: 180px;">Notes</th>
+					<th style="width: 140px;">Reading</th>
+		      <th style="width: 140px;">Notes</th>
 		    </tr>
 		    <tr>
 		      <td>Fri<br/> 09/05/25</td>
@@ -60,7 +60,7 @@
 						[slides after]
 					</td>
 					<td>&mdash;</td>
-		      <td>HW0 Out: [pdf] [tex]</td>
+		      <td>HW1 Out: <br/> <a href="hw/hw1.pdf">[pdf]</a> <a href="hw/hw1.tex">[tex]</a></td>
 		    </tr>
 		    <tr>
 		      <td>Tue<br/> 09/09/25</td>
@@ -81,7 +81,7 @@
 						<strong>Class 3: TBD</strong><br/>
 					</td>
 					<td>&mdash;</td>
-		      <td><strong>HW0 Due</strong></td>
+		      <td><strong>HW1 Due</strong></td>
 		    </tr>
 		    <!--<tr>
 		      <td>Tue<br/> 09/16/25</td>
