--- a/cs7800-f25/course-info.html
+++ b/cs7800-f25/course-info.html
@@ -38,7 +38,7 @@
 <div>
       <h4>Overview</h4>
       
-      <p>This is an advanced course in algorithms aimed at Ph.D. students in computer science and related fields.  The course surveys fundamental topics like optimization&mdash;greedy algorithms, dynamic programming, network flow, and linear and convex programming&mdash;randomized algorithms, online algorithms, NP-completeness.  The course emphasizes how to reason and communicate rigorously about algorithms.</p>
+      <p>This is an advanced course in algorithms aimed at PhD students in computer science and related fields.  The course surveys fundamental topics like optimization&mdash;greedy algorithms, dynamic programming, network flow, and linear and convex programming&mdash;randomized algorithms, online algorithms, NP-completeness.  The course emphasizes how to reason and communicate rigorously about algorithms.</p>
       
 			<h4>Time & Location</h4>
 			TF 1:35 &ndash; 3:15pm in <a href="https://maps.app.goo.gl/EuA7UR1oLNorQ2Wz5">Ryder Hall 296</a>
