--- a/cs7800-f25/course-info.html
+++ b/cs7800-f25/course-info.html
@@ -54,7 +54,9 @@
 				  </div>
         </div>
 				
-			<h4>Come Back Soon for More Info!</h4>
+			<h4>Course Info</h4>
+			
+			You can find most of the relevant <a href="slides/course-overview.pdf">nformation about course</a> in this slide deck from the first day of class.
 			
 			
 			
