--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -57,7 +57,7 @@
 							<li>Course Overview</li>
 							<li>Stable Matching</li>
 						</ul>
-						[slides after]
+						<a href="slides/01-stable-matching-after.pdf">[slides after]</a>
 					</td>
 					<td>&mdash;</td>
 		      <td>HW1 Out: <br/> <a href="hw/hw1.pdf">[pdf]</a> <a href="hw/hw1.tex">[tex]</a></td>
