--- a/cs7800-f25/course-info.html
+++ b/cs7800-f25/course-info.html
@@ -56,7 +56,7 @@
 				
 			<h4>Course Info</h4>
 			
-			You can find most of the relevant <a href="slides/course-overview.pdf">nformation about course</a> in this slide deck from the first day of class.
+			You can find most of the relevant <a href="slides/course-overview.pdf">information about course</a> in this slide deck from the first day of class.
 			
 			
 			
