--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -65,12 +65,12 @@
 		    <tr>
 		      <td>Tue<br/> 09/09/25</td>
 		      <td>
-						<strong>Class 2: Greedy Algorithms</strong><br/>
+						<strong>Class 2: Greedy Algorithms I</strong><br/>
 						<ul>
 							<li>Interval Scheduling</li>
 							<li>Minimizing Lateness</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/02-greedy-before.pdf">[slides before]</a> [slides after]
 					</td>
 					<td>KT 4.1&ndash;4.2</td>
 		      <td>&mdash;</td>
@@ -78,9 +78,14 @@
 		    <tr>
 		      <td>Fri<br/> 09/12/25</td>
 		      <td>
-						<strong>Class 3: TBD</strong><br/>
+						<strong>Class 3: Greedy Algorithms II</strong><br/>
+						<ul>
+							<li>Duality</li>
+							<li>Minimum Spanning Tree</li>
+						</ul>
+						[slides before] [slides after]
 					</td>
-					<td>&mdash;</td>
+					<td>KT 4.5-4.6 </br> E 7</td>
 		      <td><strong>HW1 Due</strong></td>
 		    </tr>
 		    <!--<tr>
