--- a/cs7800-f25/index.html
+++ b/cs7800-f25/index.html
@@ -50,37 +50,30 @@
 						<p>Jonathan Ullman<br/>
 						<a href="mailto: jullman@ccs.neu.edu">jullman@ccs.neu.edu</a><br/>
 					  Office Hours: TBD<br/>
-					  Location: <a href="https://maps.app.goo.gl/LGaAWEDxsTPGMsuUA">177 Huntington Ave, Office 616</a></p>
+					  Location: <a href="https://maps.app.goo.gl/LGaAWEDxsTPGMsuUA">177 Huntington Ave Office 616</a></p>
 				  </div>
         </div>
 			
-      <!--<h4>Teaching Assistants</h4>
+      <h4>Teaching Assistants</h4>
 		    <div id="instructorinfo"> 
-					<div id="instructorphoto"><img src="img/konstantina-small.png" height="100px"></div>
+					<div id="instructorphoto"><img src="img/john-small.jpeg" height="100px"></div>
 		      <div id="instructorname"> 			
-						<p>Konstantina Bairaktari<br/>
-						<a href="mailto: bairaktari.k@northeastern.edu">bairaktari.k@northeastern.edu</a><br/>
-					  Office Hours: Th 3:00pm &ndash; 5:00pm<br/>
-					  Location: Snell Library 047</p>
-				  </div>
-					<div id="instructorphoto"><img src="img/rose-small.png" height="100px"></div>
-		      <div id="instructorname"> 			
-						<p>Rose Silver<br/>
-						<a href="mailto: silver.r@northeastern.edu">silver.r@northeastern.edu</a><br/>
-					  Office Hours: F 3:30pm &ndash; 5:30pm<br/>
-					  Location: Snell Library 047</p>
+						<p>John Abascal<br/>
+						<a href="mailto: bairaktari.k@northeastern.edu">abascal.j@northeastern.edu</a><br/>
+					  Office Hours: TBD<br/>
+					  Location: 177 Huntington Ave, 6th Floor</p>
 				  </div>
         </div>
 				
 			<h4>Important Links</h4>
 				<ul>
-					<li>To ask questions: <a href="https://piazza.com/class/l5x2fyu9chz5i7">Piazza</a></li>
-					<li>To submit homework: <a href="https://www.gradescope.com/courses/410513">Gradescope</a> (entry code K33NED)</li>
+					<li>To ask questions: <a href="https://piazza.com/class/mf9zwmf7aiy1dz">Piazza</a></li>
+					<li>To submit homework: <a href="https://www.gradescope.com/courses/1117315">Gradescope</a> (entry code D3ERDX)</li>
 					<li>To write LaTeX: <a href="https://www.overleaf.com">Overleaf</a></li>
 					<li>To learn LaTeX: <a href="https://www.overleaf.com/learn">Overleaf guides</a></li>
 					<li>To request disability accommodations: <a href="https://drc.sites.northeastern.edu/">Northeastern DRC</a></li>
 					<li>To find mental health resources: <a href="https://www.northeastern.edu/uhcs/counseling-services/what-to-expect-behavioral-health/">Find@Northeastern</a></li>
-				</ul>-->
+				</ul>
 </div>
 
 
