--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -60,7 +60,7 @@
 						<a href="slides/01-stable-matching-after.pdf">[slides after]</a>
 					</td>
 					<td>&mdash;</td>
-		      <td>HW1 Out: <br/> <a href="hw/hw1.pdf">[pdf]</a> <a href="hw/hw1.tex">[tex]</a></td>
+		      <td>HW1 Out <br/> <a href="hw/hw1.pdf">[pdf]</a> <a href="hw/hw1.tex">[tex]</a></td>
 		    </tr>
 		    <tr>
 		      <td>Tue<br/> 09/09/25</td>
@@ -70,7 +70,7 @@
 							<li>Interval Scheduling</li>
 							<li>Minimizing Lateness</li>
 						</ul>
-						<a href="slides/02-greedy-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/02-greedy-before.pdf">[slides before]</a> <a href="slides/02-greedy-after.pdf">[slides after]</a>
 					</td>
 					<td>KT 4.1&ndash;4.2</td>
 		      <td>&mdash;</td>
@@ -80,18 +80,21 @@
 		      <td>
 						<strong>Class 3: Greedy Algorithms II</strong><br/>
 						<ul>
-							<li>Duality</li>
 							<li>Minimum Spanning Tree</li>
+							<li>Duality</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/03-mst-before.pdf">[slides before]</a> [slides after]
 					</td>
 					<td>KT 4.5-4.6 </br> E 7</td>
-		      <td><strong>HW1 Due</strong></td>
+		      <td><strong>HW1 Due</strong><br/><br/>HW2 Out <br/> [pdf] [tex]</td>
 		    </tr>
-		    <!--<tr>
+		    <tr>
 		      <td>Tue<br/> 09/16/25</td>
 		      <td>
-						<strong>Class 4: TBD</strong><br/>
+						<strong>Class 4: Dynamic Programming I</strong><br/>
+						<ul>
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -99,7 +102,10 @@
 		    <tr>
 		      <td>Fri<br/> 09/19/25</td>
 		      <td>
-						<strong>Class 5: TBD</strong><br/>
+						<strong>Class 5: Dynamic Programming II</strong><br/>
+						<ul>
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -107,7 +113,10 @@
 		    <tr>
 		      <td>Tue<br/> 09/23/25</td>
 		      <td>
-						<strong>Class 6: TBD</strong><br/>
+						<strong>Class 6: Dynamic Programming III</strong><br/>
+						<ul>
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -115,20 +124,26 @@
 		    <tr>
 		      <td>Fri<br/> 09/26/25</td>
 		      <td>
-						<strong>Class 7: TBD</strong><br/>
+						<strong>Class 7: Network Flow I</strong><br/>
+						<ul>
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
-		      <td>&mdash;</td>
+		      <td><strong>HW2 Due</strong></td>
 		    </tr>
 		    <tr>
 		      <td>Tue<br/> 09/30/25</td>
 		      <td>
-						<strong>Class 8: TBD</strong><br/>
+						<strong>Class 8: Network Flow II</strong><br/>
+						<ul>
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
 		    </tr>
-		    <tr>
+		    <!--<tr>
 		      <td>Fri<br/> 10/02/25</td>
 		      <td>
 						<strong>Class 9: TBD</strong><br/>
