--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -83,20 +83,22 @@
 							<li>Minimum Spanning Tree</li>
 							<li>Duality</li>
 						</ul>
-						<a href="slides/03-mst-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/03-mst-before.pdf">[slides before]</a> <a href="slides/03-mst-after.pdf">[slides after]<a>
 					</td>
 					<td>KT 4.5-4.6 </br> E 7</td>
-		      <td><strong>HW1 Due</strong><br/><br/>HW2 Out <br/> [pdf] [tex]</td>
+		      <td><strong>HW1 Due</strong><br/><br/>HW2 Out <br/> <a href="hw/hw2.pdf">[pdf]</a> <a href=hw/hw2.tex>[tex]</a></td>
 		    </tr>
 		    <tr>
 		      <td>Tue<br/> 09/16/25</td>
 		      <td>
 						<strong>Class 4: Dynamic Programming I</strong><br/>
 						<ul>
+							<li>Fibonacci Numbers</li>
+							<li>Weighted Interval Scheduling</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/04-dynamic-programming-before.pdf">[slides before]</a> [slides after]
 					</td>
-					<td>&mdash;</td>
+					<td>KT 6.1-6.2</td>
 		      <td>&mdash;</td>
 		    </tr>
 		    <tr>
@@ -104,10 +106,12 @@
 		      <td>
 						<strong>Class 5: Dynamic Programming II</strong><br/>
 						<ul>
+							<li>Segmented Least Squares</li>
+							<li>Knapsack</li>
 						</ul>
 						[slides before] [slides after]
 					</td>
-					<td>&mdash;</td>
+					<td>KT 6.3-6.4</td>
 		      <td>&mdash;</td>
 		    </tr>
 		    <tr>
