--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -96,7 +96,7 @@
 							<li>Fibonacci Numbers</li>
 							<li>Weighted Interval Scheduling</li>
 						</ul>
-						<a href="slides/04-dynamic-programming-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/04-dynamic-programming-before.pdf">[slides before]</a> <a href="slides/04-dynamic-programming-after.pdf">[slides after]</a>
 					</td>
 					<td>KT 6.1-6.2</td>
 		      <td>&mdash;</td>
@@ -109,7 +109,7 @@
 							<li>Segmented Least Squares</li>
 							<li>Knapsack</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/05-least-squares-before.pdf">[slides before]</a> [slides after]
 					</td>
 					<td>KT 6.3-6.4</td>
 		      <td>&mdash;</td>
