--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -107,9 +107,8 @@
 						<strong>Class 5: Dynamic Programming II</strong><br/>
 						<ul>
 							<li>Segmented Least Squares</li>
-							<li>Knapsack</li>
 						</ul>
-						<a href="slides/05-least-squares-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/05-least-squares-before.pdf">[slides before]</a> <a href="slides/05-least-squares-after.pdf">[slides after]</a>
 					</td>
 					<td>KT 6.3-6.4</td>
 		      <td>&mdash;</td>
@@ -119,10 +118,12 @@
 		      <td>
 						<strong>Class 6: Dynamic Programming III</strong><br/>
 						<ul>
+							<li>Knapsack</li>
+							<li>Shortest Paths</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/06-knapsack-before.pdf">[slides before]</a> [slides after]
 					</td>
-					<td>&mdash;</td>
+					<td>KT 6.4, 6.8-6.9</td>
 		      <td>&mdash;</td>
 		    </tr>
 		    <tr>
@@ -130,30 +131,36 @@
 		      <td>
 						<strong>Class 7: Network Flow I</strong><br/>
 						<ul>
+							<li>Ford-Fulkerson</li>
+							<li>Duality</li>
 						</ul>
 						[slides before] [slides after]
 					</td>
-					<td>&mdash;</td>
-		      <td><strong>HW2 Due</strong></td>
+					<td>KT 7.1-7.2</td>
+		      <td><strong>HW2 Due</strong> <br/><br/> HW3 Out <br/>[pdf] [tex]</td>
 		    </tr>
 		    <tr>
 		      <td>Tue<br/> 09/30/25</td>
 		      <td>
 						<strong>Class 8: Network Flow II</strong><br/>
 						<ul>
+							<li>Choosing Good Paths</li>
 						</ul>
 						[slides before] [slides after]
 					</td>
-					<td>&mdash;</td>
+					<td>E 10.6</td>
 		      <td>&mdash;</td>
 		    </tr>
-		    <!--<tr>
+		    <tr>
 		      <td>Fri<br/> 10/02/25</td>
 		      <td>
-						<strong>Class 9: TBD</strong><br/>
+						<strong>Class 9: Flow Applications</strong><br/>
+						<ul>
+							<li>Maximum Matching</li>
+							<li>Image Segmentation</li>
 					</td>
-					<td>&mdash;</td>
-		      <td>&mdash;</td>
+					<td>KT 7.5, 7.10</td>
+		      <td><strong>HW3 Due</strong></td>
 		    </tr>
 		    <tr>
 		      <td>Tue<br/> 10/07/25</td>
@@ -166,20 +173,28 @@
 		    <tr>
 		      <td>Fri<br/> 10/10/25</td>
 		      <td>
-						<strong>Class 11: TBD</strong><br/>
+						<strong>Class 11: Linear Programming I</strong><br/>
+						<ul>
+							<li>Basic Concepts</li>
+							<li>Simplex Algorithm</li>
+						</ul>
 					</td>
-					<td>&mdash;</td>
+					<td>W <a href="slides/lp-notes-I.pdf">I</a></td>
 		      <td>&mdash;</td>
 		    </tr>
 		    <tr>
 		      <td>Tue<br/> 10/14/22</td>
 		      <td>
-						<strong>Class 12: TBD</strong><br/>
+						<strong>Class 12: Linear Programming II</strong><br/>
+						<ul>
+							<li>Duality</li>
+							<li>Ellipsoid Algorithm</li>
+						</ul>
 					</td>
-					<td>&mdash;</td>
+					<td>W <a href="slides/lp-notes-II.pdf">II</a>, <a href="slides/lp-notes-III.pdf">III</a></td>
 		      <td>&mdash;</td>
 		    </tr>
-		    <tr>
+		    <!--<tr>
 		      <td>Fri<br/> 10/17/25</td>
 		      <td>
 						<strong>Class 13: TBD</strong><br/>
