--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -158,6 +158,8 @@
 						<ul>
 							<li>Maximum Matching</li>
 							<li>Image Segmentation</li>
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>KT 7.5, 7.10</td>
 		      <td><strong>HW3 Due</strong></td>
@@ -178,6 +180,7 @@
 							<li>Basic Concepts</li>
 							<li>Simplex Algorithm</li>
 						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>W <a href="slides/lp-notes-I.pdf">I</a></td>
 		      <td>&mdash;</td>
@@ -190,6 +193,7 @@
 							<li>Duality</li>
 							<li>Ellipsoid Algorithm</li>
 						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>W <a href="slides/lp-notes-II.pdf">II</a>, <a href="slides/lp-notes-III.pdf">III</a></td>
 		      <td>&mdash;</td>
